style.css
/* ... */
.project-card::after {
  border-right: 1px solid transparent;
  border-bottom: 1px solid transparent;
  right: 1rem;
  bottom: 1rem;
}

.project-card:hover::before, .project-card:hover::after {
  width: 3rem;
  height: 3rem;
  border-color: white;
}

@media screen and (max-width: 60rem) {
  .project-card > .content {
    flex-direction: column-reverse;
    align-items: center;
    justify-content: center;
  }

  .project-card:hover > .content {
    padding: 2rem 2rem 0rem 2rem;
    transition: all 0.3s ease-in-out;
  }

  .art-container {
    width: 30rem;
  }
}

@media screen and (max-width: 576px) {
  .project-card .image-container {
    width: 100%;
  }

  .art-container {
    width: 40rem;
  }
}

.project-card .description {
  margin-bottom: 3rem;
  width: 40%;
  min-width: 10rem;
}

.project-card p {
  margin-bottom: 3rem;
}

.project-card a {
  cursor: pointer;
  transition: all 250ms ease-out;
  border-radius: 0.5rem;
  border: 1px solid var(--test-button-hover-color);
  padding: 1rem 2rem;
  text-decoration: none;
  color: black;
  transition: 0.3s;
  position: relative;
  z-index: 1;
}

.project-card a::after {
  content: "";
  width: 0;
  height: 100%;
  background-color: var(--test-button-hover-color);
  border-radius: 0.25rem;
  position: absolute;
  top: 0rem;
  left: 0rem;
  z-index: -1;
  transition: 0.3s;
}

.project-card a:hover::after {
  width: 100%;
}

.project-card .image-container {
  height: 22rem;
  display: flex;
  flex: 1 0 auto;
  max-width: 25rem;
}

.project-card img {
  object-fit: cover;
  max-width: 100%;
}

.art-section > .content {
  display: flex;
  padding: 0rem;
  flex-wrap: wrap;
  gap: 1rem;

}

.art-container {
  display: flex;
  max-width: 25rem;
  box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.3);
  cursor: pointer;
}

.art-container:hover {
  filter: opacity(0.75); 
  transition: all 0.3s ease-in-out;
}

.art-container img {
  object-fit: cover;
  width: 100%;
}

/* about page style */
.profile {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 4rem;
  justify-content: space-between;
}

.profile > .description {
  max-width: 32rem;
  min-width: 18rem;
  margin-bottom: 3rem;
  margin-right: 1rem;
  flex: 1 1 6rem;
}

.profile .image-container {
  display: flex;
  max-width: 25rem;
  width: 18rem;
  height: 25rem;
  background: var(--test-button-color);
}

.profile img {
  width: 100%;
  object-fit: cover;
}

.technical {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 0rem;
  width: 100%;
  grid-gap: 2rem;
}

.personal-background {
  margin-bottom: 4rem;
  display: grid;
  grid-auto-flow: column;
  width: 100%;
  place-content: center;
  height: max-content;
  min-height: 3rem;
}

.personal-background .container {
  filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 0.2));
  gap: 1rem;
  display: flex;
  height: 100%;
}

.personal-background .arrow {
  background: var(--test-button-color);
  padding: 1rem 2rem;
  clip-path: polygon(0 0, calc(100% - 1rem) 0, 100% 50%, calc(100% - 1rem) 100%, 0 100%);
  margin: auto;
  flex-grow: 1;
  height: 100%;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.technical > * {
  border-radius: 1rem;
  border: 1px solid var(--test-card-color);
  padding: 2rem;
}

.technical ul {
  list-style-type: none;
  padding: 0rem;
}

@media screen and (max-width: 52rem) {
  .profile .image-container {
    margin: auto;
    width: 32rem;
  }

  .technical {
    grid-template-columns: repeat(2, 1fr);
  }

  .personal-background .arrow {
    padding: 0.5rem 1rem;
  }
}



/* project detail page style */
.project-block {
  border-radius: 0.5rem;
  background-color: var(--test-card-color);
  display: flex;
  margin: 2rem -2rem 3rem -2rem;
  box-shadow: 0rem 0rem 2rem var(--test-card-color);
  justify-content: center;
}

.project-summary {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-between;
}

.project-summary > p {
  max-width: 32rem;
  min-width: 12rem;
}

.project-summary > div {
  max-width: 18rem;
}

/* animations */
/* ----------------------------------------------
 * Generated by Animista on 2023-1-16 1:18:41
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation tilt-in-top-1
 * ----------------------------------------
 */
 .tilt-in-top-1 {
	-webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
	        animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
 @-webkit-keyframes tilt-in-top-1 {
  0% {
    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
            transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
            transform: rotateY(0deg) translateY(0) skewY(0deg);
    opacity: 1;
  }
}
@keyframes tilt-in-top-1 {
  0% {
    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
            transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
    opacity: 0;
  }
  100% {
    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
            transform: rotateY(0deg) translateY(0) skewY(0deg);
    opacity: 1;
  }
}

.tilt-in-top-1:nth-child(1) {
  animation-delay: 500ms;
}
.tilt-in-top-1:nth-child(2) {
  animation-delay: 1000ms;
}
.tilt-in-top-1:nth-child(3) {
  animation-delay: 1500ms;
}

.technical .tilt-in-top-1:nth-child(1) {
  animation-delay: 1s;
}

.technical .tilt-in-top-1:nth-child(2) {
  animation-delay: 1.5s;
}
.technical .tilt-in-top-1:nth-child(3) {
  animation-delay: 2s;
}

.tilt-in-top-1.project-block {
  animation-delay: 1s;
}
.tilt-in-top-1.project-summary {
  animation-delay: 1.5s;
}
.tilt-in-top-1:nth-child(3).project-section {
  animation-delay: 2.0s;
}
.tilt-in-top-1:nth-child(4).project-section {
  animation-delay: 2.5s;
}
/* ... */

